--- a/OnlineGame/src/main/resources/static/Game.css
+++ b/OnlineGame/src/main/resources/static/Game.css
@@ -1,3 +1,10 @@
+.header {
+	background-color: #d3d3d3;
+	padding: 5px;
+	text-align: center;
+	color: white;
+}
+
 .grid-container {
 	display: grid;
 	grid-template-columns: repeat(6, 80px);
@@ -6,6 +13,7 @@
 	width: 480px;
 	margin: 0 auto;
 	text-align: center;
+	padding: 10px;
 }
 
 .grid-item {
@@ -14,7 +22,6 @@
 	border: 1px solid rgba(0, 0, 0, 0.8);
 	font-size: 25px;
 	text-align: center;
-	font-size: 25px;
 }
 
 .empty-item {
@@ -49,6 +56,7 @@
 	font-size: 20px;
 	text-align: center;
 	font-size: 20px;
+	padding-top: 6px;
 }
 
 .label-white {
@@ -58,18 +66,19 @@
 	font-size: 20px;
 	text-align: center;
 	font-size: 20px;
+	padding-top: 6px;
 }
 
-header {
-	background-color: #d3d3d3;
-	padding: 5px;
+.label-icon {
+	border-radius: 5px;
+	background-color: white;
+	border: 1px solid rgba(0, 0, 0, 0.8);
 	text-align: center;
-	color: white;
 }
 
 .button-container {
 	text-align: center;
-	padding: 1%;
+	padding: 10px;
 }
 
 .button {
@@ -84,7 +93,59 @@ header {
 
 .dice-button {
 	border-radius: 15px;
-	background-color: rgba(255, 255, 255, 0.8);
 	border: 1px solid rgba(0, 0, 0, 0.8);
-	padding: 50px;
+	padding: 10px;
+	padding-bottom: 8px;
+}
+
+.dice-button-2 {
+	border-radius: 15px;
+	border: 1px solid rgba(0, 0, 0, 0.8);
+	padding: 100px;
+	padding-bottom: 8px;
+}
+
+@media ( max-width : 768px) {
+	.header {
+		padding: 1px;
+	}
+	.button-container {
+		padding: 1px;
+	}
+	.grid-container {
+		padding: 1px;
+		display: grid;
+		background-color: #f3f3f3;
+		width: 100%;
+		grid-template-columns: repeat(6, 16.66%);
+		grid-template-rows: repeat(18, 6.4%);
+	}
+	.dice-button {
+		border-radius: 15px;
+		border: 1px solid rgba(0, 0, 0, 0.8);
+		padding: 5px;
+		padding-bottom: 3px;
+	}
+	.button {
+		width: 40%;
+		font-size: 16px;
+	}
+	.grid-item {
+		font-size: 18px;
+	}
+	.label-gray {
+		font-size: 15px;
+	}
+	.label-white {
+		font-size: 15px;
+	}
+	.label-icon {
+		padding-bottom: 5px;
+	}
+	.score {
+		font-size: 18px;
+	}
+	.score-final {
+		font-size: 18px;
+	}
 }
