--- a/OnlineGame/src/main/resources/static/css/Game.css
+++ b/OnlineGame/src/main/resources/static/css/Game.css
@@ -22,6 +22,7 @@
 	border: 1px solid rgba(0, 0, 0, 0.8);
 	font-size: 25px;
 	text-align: center;
+	cursor: pointer;
 }
 
 .empty-item {
@@ -35,7 +36,7 @@
 	font-size: 25px;
 	text-align: center;
 	font-weight: bold;
-	text-align: center;
+	padding-top: 6px;
 }
 
 .final-score {
@@ -47,6 +48,7 @@
 	grid-column-start: 5;
 	grid-column-end: 7;
 	font-weight: bold;
+	padding-top: 6px;
 }
 
 .label-gray {
@@ -82,6 +84,7 @@
 }
 
 .button {
+	cursor: pointer;
 	display: inline-block;
 	border-radius: 5px;
 	background-color: rgb(176, 196, 222);
@@ -96,13 +99,7 @@
 	border: 1px solid rgba(0, 0, 0, 0.8);
 	padding: 10px;
 	padding-bottom: 8px;
-}
-
-.dice-button-2 {
-	border-radius: 15px;
-	border: 1px solid rgba(0, 0, 0, 0.8);
-	padding: 100px;
-	padding-bottom: 8px;
+	cursor: pointer;
 }
 
 @media ( max-width : 768px) {
@@ -118,7 +115,7 @@
 		background-color: #f3f3f3;
 		width: 100%;
 		grid-template-columns: repeat(6, 16.66%);
-		grid-template-rows: repeat(18, 6.4%);
+		grid-template-rows: repeat(18, 6.3%);
 	}
 	.dice-button {
 		border-radius: 15px;
@@ -128,7 +125,7 @@
 	}
 	.button {
 		width: 40%;
-		font-size: 16px;
+		font-size: 20px;
 	}
 	.grid-item {
 		font-size: 18px;
