--- a/OnlineGame/src/main/resources/static/css/jamb.css
+++ b/OnlineGame/src/main/resources/static/css/jamb.css
@@ -11,9 +11,11 @@
 	grid-template-rows: repeat(18, 40px);
 	background-color: #f3f3f3;
 	width: 480px;
+	height: 720px;
 	margin: 0 auto;
 	text-align: center;
 	padding: 10px;
+	margin: 0 auto;
 }
 
 .grid-item {
@@ -39,7 +41,7 @@
 	padding-top: 6px;
 }
 
-.final-score {
+.score-final {
 	border-radius: 5px;
 	background-color: rgb(176, 196, 222);
 	border: 1px solid rgba(0, 0, 0, 0.8);
@@ -65,17 +67,19 @@
 	border-radius: 5px;
 	background-color: white;
 	border: 1px solid rgba(0, 0, 0, 0.8);
-	font-size: 20px;
 	text-align: center;
-	font-size: 20px;
+	font-size: 18px;
 	padding-top: 6px;
 }
 
-.label-icon {
+.image {
+	width: 80px;
+	height: 40px;
 	border-radius: 5px;
 	background-color: white;
 	border: 1px solid rgba(0, 0, 0, 0.8);
 	text-align: center;
+	border-radius: 5px;
 }
 
 .button-container {
@@ -102,7 +106,16 @@
 	cursor: pointer;
 }
 
-@media ( max-width : 768px) {
+.label-ann {
+	border-radius: 5px;
+	background-color: white;
+	border: 1px solid rgba(0, 0, 0, 0.8);
+	text-align: center;
+	font-size: 18px;
+	padding-top: 6px;
+}
+
+@media screen and ( max-width : 530px) {
 	.header {
 		padding: 1px;
 	}
@@ -110,21 +123,18 @@
 		padding: 1px;
 	}
 	.grid-container {
-		padding: 1px;
-		display: grid;
-		background-color: #f3f3f3;
 		width: 100%;
-		grid-template-columns: repeat(6, 16.66%);
-		grid-template-rows: repeat(18, 6.3%);
+		grid-template-columns: repeat(6, 16.666%);
+		padding: 1px;
+		height: 90vh;
+		grid-template-rows: repeat(18, 5.15%);
 	}
 	.dice-button {
-		border-radius: 15px;
-		border: 1px solid rgba(0, 0, 0, 0.8);
 		padding: 5px;
 		padding-bottom: 3px;
 	}
 	.button {
-		width: 40%;
+		width: 60%;
 		font-size: 20px;
 	}
 	.grid-item {
@@ -136,13 +146,21 @@
 	.label-white {
 		font-size: 15px;
 	}
-	.label-icon {
-		padding-bottom: 5px;
+	.label-ann {
+		font-size: 12px;
+		padding-top: 3px;
 	}
 	.score {
 		font-size: 18px;
+		padding-top: 12%;
+		padding-bottom: 0px;
 	}
 	.score-final {
-		font-size: 18px;
+		font-size: 25px;
+		padding-top: 2%;
+	}
+	.image {
+		width: 96%;
+		height: 96%;
 	}
 }
