--- a/OnlineGame/src/main/resources/static/css/game.css
+++ b/OnlineGame/src/main/resources/static/css/game.css
@@ -11,11 +11,9 @@
 	grid-template-rows: repeat(18, 40px);
 	background-color: #f3f3f3;
 	width: 480px;
-	height: 720px;
 	margin: 0 auto;
 	text-align: center;
 	padding: 10px;
-	margin: 0 auto;
 }
 
 .grid-item {
@@ -41,7 +39,7 @@
 	padding-top: 6px;
 }
 
-.score-final {
+.final-score {
 	border-radius: 5px;
 	background-color: rgb(176, 196, 222);
 	border: 1px solid rgba(0, 0, 0, 0.8);
@@ -67,19 +65,17 @@
 	border-radius: 5px;
 	background-color: white;
 	border: 1px solid rgba(0, 0, 0, 0.8);
+	font-size: 20px;
 	text-align: center;
-	font-size: 18px;
+	font-size: 20px;
 	padding-top: 6px;
 }
 
-.image {
-	width: 80px;
-	height: 40px;
+.label-icon {
 	border-radius: 5px;
 	background-color: white;
 	border: 1px solid rgba(0, 0, 0, 0.8);
 	text-align: center;
-	border-radius: 5px;
 }
 
 .button-container {
@@ -106,27 +102,7 @@
 	cursor: pointer;
 }
 
-.label-ann {
-	border-radius: 5px;
-	background-color: white;
-	border: 1px solid rgba(0, 0, 0, 0.8);
-	text-align: center;
-	font-size: 18px;
-	padding-top: 6px;
-}
-
-.button-bottom {
-	cursor: pointer;
-	display: inline-block;
-	border-radius: 5px;
-	background-color: rgb(176, 196, 222);
-	border: 1px solid rgba(0, 0, 0, 0.8);
-	font-size: 20px;
-	text-align: center;
-	width: 110px;
-}
-
-@media screen and ( max-width : 530px) {
+@media ( max-width : 768px) {
 	.header {
 		padding: 1px;
 	}
@@ -134,18 +110,21 @@
 		padding: 1px;
 	}
 	.grid-container {
-		width: 100%;
-		grid-template-columns: repeat(6, 16.666%);
 		padding: 1px;
-		height: 90vh;
-		grid-template-rows: repeat(18, 5.15%);
+		display: grid;
+		background-color: #f3f3f3;
+		width: 100%;
+		grid-template-columns: repeat(6, 16.66%);
+		grid-template-rows: repeat(18, 6.3%);
 	}
 	.dice-button {
+		border-radius: 15px;
+		border: 1px solid rgba(0, 0, 0, 0.8);
 		padding: 5px;
 		padding-bottom: 3px;
 	}
 	.button {
-		width: 60%;
+		width: 40%;
 		font-size: 20px;
 	}
 	.grid-item {
@@ -157,21 +136,13 @@
 	.label-white {
 		font-size: 15px;
 	}
-	.label-ann {
-		font-size: 12px;
-		padding-top: 3px;
+	.label-icon {
+		padding-bottom: 5px;
 	}
 	.score {
 		font-size: 18px;
-		padding-top: 12%;
-		padding-bottom: 0px;
 	}
 	.score-final {
-		font-size: 25px;
-		padding-top: 2%;
-	}
-	.image {
-		width: 96%;
-		height: 96%;
+		font-size: 18px;
 	}
 }
