--- a/OnlineGame/src/main/resources/templates/index.html
+++ b/OnlineGame/src/main/resources/templates/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
-<meta name="viewport" content="height=device-height, initial-scale=1, minimum-scale=1"/>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, minimum-scale=1" />
+<meta name="viewport"
+	content="height=device-height, initial-scale=1, minimum-scale=1" />
 
 
 <head>
 <link rel="stylesheet" type="text/css" th:href="@{css/jamb.css}">
-<link rel="shortcut icon" href="#" />
+<link rel="icon" th:href="@{/images/favicon.png}" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!-- <script src="../static/Game.js"></script> -->
 <script type="text/javascript" th:src="@{js/jamb.js}"></script>
 </head>
 
@@ -22,54 +23,73 @@
 </header>
 
 <div class="button-container">
-	<button class="button" id="roll-dice" onClick="rollDice(0)">BACI KOCKE</button>
-	
+	<button class="button" id="roll-dice" onClick="rollDice(0)">BACI
+		KOCKE</button>
+
 </div>
 
 <div class="grid-container">
 	<div class="empty-item"></div>
-	<div><img class="image" th:src="@{/images/box/7.bmp}"></div>
-	<div><img class="image" th:src="@{/images/box/8.bmp}"></div>
-	<div><img class="image" th:src="@{/images/box/9.bmp}"></div>
+	<div>
+		<img class="image" th:src="@{/images/box/7.bmp}">
+	</div>
+	<div>
+		<img class="image" th:src="@{/images/box/8.bmp}">
+	</div>
+	<div>
+		<img class="image" th:src="@{/images/box/9.bmp}">
+	</div>
 	<button class="label-ann">NAJAVA</button>
 	<div class="empty-item"></div>
 
-	<div><img class="image" th:src="@{/images/box/1.bmp}"></div>
+	<div>
+		<img class="image" th:src="@{/images/box/1.bmp}">
+	</div>
 	<button class="grid-item" id="0" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="13" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="26" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="39" onClick="writeDown(this.id)"></button>
 	<div class="empty-item"></div>
 
-	<div><img class="image" th:src="@{/images/box/2.bmp}"></div>
+	<div>
+		<img class="image" th:src="@{/images/box/2.bmp}">
+	</div>
 	<button class="grid-item" id="1" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="14" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="27" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="40" onClick="writeDown(this.id)"></button>
 	<div class="empty-item"></div>
 
-	<div><img class="image" th:src="@{/images/box/3.bmp}"></div>
+	<div>
+		<img class="image" th:src="@{/images/box/3.bmp}">
+	</div>
 	<button class="grid-item" id="2" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="15" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="28" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="41" onClick="writeDown(this.id)"></button>
 	<div class="empty-item"></div>
 
-	<div><img class="image" th:src="@{/images/box/4.bmp}"></div>
+	<div>
+		<img class="image" th:src="@{/images/box/4.bmp}">
+	</div>
 	<button class="grid-item" id="3" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="16" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="29" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="42" onClick="writeDown(this.id)"></button>
 	<div class="empty-item"></div>
 
-	<div><img class="image" th:src="@{/images/box/5.bmp}"></div>
+	<div>
+		<img class="image" th:src="@{/images/box/5.bmp}">
+	</div>
 	<button class="grid-item" id="4" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="17" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="30" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="43" onClick="writeDown(this.id)"></button>
 	<div class="empty-item"></div>
 
-	<div><img class="image" th:src="@{/images/box/6.bmp}"></div>
+	<div>
+		<img class="image" th:src="@{/images/box/6.bmp}">
+	</div>
 	<button class="grid-item" id="5" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="18" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="31" onClick="writeDown(this.id)"></button>
@@ -82,7 +102,7 @@
 	<div class="score" id="upper2"></div>
 	<div class="score" id="upper3"></div>
 	<div class="score" id="upper4"></div>
-	
+
 	<div class="label-white">max</div>
 	<button class="grid-item" id="6" onClick="writeDown(this.id)"></button>
 	<button class="grid-item" id="19" onClick="writeDown(this.id)"></button>
@@ -151,5 +171,11 @@
 	<div class="empty-item"></div>
 	<div class="empty-item"></div>
 	<div class="score-final" id="final"></div>
+</div>
+<div class="button-container">
+	<button class="button-bottom" onClick="showRules()">Pravila</button>
+	<button class="button-bottom" onClick="showLeaderboard()">TOP
+		10</button>
+	<button class="button-bottom" onClick="showAllScores()">Rezultati</button>
 </div>
 </html>
